--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
 			<div class="compile">
 				<a href="javascript:;" class="file btn btn-success btn-lg" 
 				v-on:change="getBanner(index)" v-model="bannerImgTo" v-for="(bannerImgF,index) in bannerImg">
-					上传第{{index+1}}张图片<input type="file" ref="uploadingBannerImg">
+					上传第{{index+1}}张图片<input type="file" ref="uploadingBannerImg" >
 				</a>
-				<button class="btn btn-primary" v-on:click="addBannerImg">再来一张图片</button>
+				<a href="javascript:;" class="file btn btn-success btn-lg" >
+					多张图片上传<input type="file" ref="moreImg" multiple="multiple" v-on:change="moreImg">
+				</a>
+				<button class="btn btn-primary" v-on:click="addBannerImg" >再来一张图片</button>
+				<button class="btn btn-primary" v-on:click="removeBannerImg">删除一张图片</button>
+				<img v-bind:src="v"/>
 			</div>
 			<!--操作区-->
 		</div>
