--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<style type="text/css">
 			ul,ol{list-style: none;margin: 0;}
 			img{width: 100%;}
+			.moreImgT{
+				width: 100%;
+			}
 		</style>
 	</head>
 	<body>
@@ -25,6 +28,13 @@
 					        </div>
 					        <div class="swiper-pagination swiper-pagination-white"></div>
 					    </div>
+					    <div class="moreImgT">
+					    	<div class="row">
+					    		<div class="col-md-1" v-for="(moreImgTo,index) in moreImgT">
+					    			<img v-bind:src="moreImgT[index]"/>
+					    		</div>
+					    	</div>
+					    </div>
 					</div>
 				</div>
 			</div>
@@ -38,7 +48,6 @@
 				</a>
 				<button class="btn btn-primary" v-on:click="addBannerImg" >再来一张图片</button>
 				<button class="btn btn-primary" v-on:click="removeBannerImg">删除一张图片</button>
-				<img v-bind:src="v"/>
 			</div>
 			<!--操作区-->
 		</div>
